Add com.sun.jndi.ldap Module
- Needed for importing com.sun.jndi.ldap in tests