@@ -44,3 +44,13 @@ dependencies {
     testImplementation "org.assertj:assertj-core"
     testImplementation "com.unboundid:unboundid-ldapsdk"
 }
+
+compileTestJava {
+    targetCompatibility = JavaVersion.VERSION_11
+    doFirst {
+        options.compilerArgs = [
+            '--add-exports', 'java.naming/com.sun.jndi.ldap=ALL-UNNAMED'
+        ]
+    }
+}
+
